fix: correct alert message box on smaller screen size

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,8 @@ nav {
 /* ===============================================================================
  === Alert
  =============================================================================== */
-#liveAlertPlaceholder {
+.liveAlertPlaceholderr {
   position: fixed;
   top: 80px;
-  left: 350px;
-  right: 350px;
   z-index: 2;
 }
